Fix horizontal alignment of calc list table

--- a/openquake/server/static/css/engine.css
+++ b/openquake/server/static/css/engine.css
@@ -26,6 +26,7 @@ h2 {
 
 .span12 {
     width: 100%;
+    margin-left: 0;
 }
 
 .span10 {
